name into values

--- a/crasher.chart/templates/configmap.yaml
+++ b/crasher.chart/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: demochart-configmap
+    name: {{ .Values.crasherCMName }}
 data:
     conf-file.yaml: |
       name: "Hello World"
