--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 dist: trusty
 
+branches:
+  only:
+    - master
+    - /^v\d+\.\d+\.\d+(-S*)?$/
+
 jobs:
   include:
     - stage: build docker image
