--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
   include:
     - stage: build docker image
       script:
+        - docker run --rm --privileged multiarch/qemu-user-static:register --reset
         - docker build -t laroque/crasher:latest-travis .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push laroque/crasher:latest-travis
