manifest prty prty pls w cherries

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,13 @@ jobs:
     - stage: build docker image
       script:
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-        - docker build --build-arg platform=armhf -t laroque/crasher:latest-travis-armhf .
+        - docker build --build-arg platform=arm -t laroque/crasher:latest-travis-arm .
         - docker build --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push laroque/crasher:latest-travis-armhf
+        - docker push laroque/crasher:latest-travis-arm
         - docker push laroque/crasher:latest-travis-amd64
         - docker --version
-        - docker manifest create laroque/crasher:latest-travis laroque/crasher:latest-travis-armhf laroque/crasher:latest-travis-amd64
-        - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-armhf --arch armhf
+        - docker manifest create laroque/crasher:latest-travis laroque/crasher:latest-travis-arm laroque/crasher:latest-travis-amd64
+        - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-arm --arch arm
         - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-amd64 --arch amd64
         #- docker manifest push laroque/crasher:latest-travis
