--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ jobs:
         - docker manifest create laroque/crasher:latest-travis laroque/crasher:latest-travis-arm laroque/crasher:latest-travis-amd64
         - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-arm --arch arm
         - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-amd64 --arch amd64
-        #- docker manifest push laroque/crasher:latest-travis
+        - docker manifest push laroque/crasher:latest-travis
