--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
         - sudo service docker restart
         - docker --version
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+        - docker build --platform arm64 -t foo .
     - stage: build docker image
       script:
         #- docker build --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
