--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
         - docker build --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
         #- docker build --platform arm -t laroque/crasher:latest-travis-arm .
-        - docker build --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
+        - docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
         #- docker build --platform amd64 -t laroque/crasher:latest-travis-amd64 .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push laroque/crasher:latest-travis-arm
