--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
         - sudo service docker restart
         - docker --version
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-        - docker build --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
+        - docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
         #- docker build --platform arm -t laroque/crasher:latest-travis-arm .
         - docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
         #- docker build --platform amd64 -t laroque/crasher:latest-travis-amd64 .
