--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
         - docker --version
         #- docker run --rm --privileged multiarch/qemu-user-static:register --reset
         - sudo apt-get install qemu-user
-        - ls /usr/bin
+        - file /usr/bin/qemu-arm-static
 #        - docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
 #        #- docker build --platform arm -t laroque/crasher:latest-travis-arm .
 #        - docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
