--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
         - sudo service docker restart
         - docker --version
         #- docker run --rm --privileged multiarch/qemu-user-static:register --reset
-        - sudo apt-get install qemu-user
+        - sudo apt-get install qemu-user qemu-user-static
         - file /usr/bin/qemu-arm-static
 #        - docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
 #        #- docker build --platform arm -t laroque/crasher:latest-travis-arm .
