--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,9 @@ jobs:
         #- docker run --rm --privileged multiarch/qemu-user-static:register --reset
         - sudo apt-get install qemu-user qemu-user-static
         - file /usr/bin/qemu-arm-static
+        - cp /usr/bin/qemu-arm-static .
 #        - docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
-#        #- docker build --platform arm -t laroque/crasher:latest-travis-arm .
+        - docker build --platform arm -t laroque/crasher:latest-travis-arm .
 #        - docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
 #        #- docker build --platform amd64 -t laroque/crasher:latest-travis-amd64 .
 #        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
