--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ jobs:
         - file /usr/bin/qemu-arm-static
         - cp /usr/bin/qemu-arm-static .
 #        - docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
+        - uname -a
         - docker build --platform arm -t laroque/crasher:latest-travis-arm .
 #        - docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
 #        - docker build --platform amd64 -t laroque/crasher:latest-travis-amd64 .
