--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ jobs:
         - uname -a
         #- docker build --platform arm -t laroque/crasher:latest-travis-arm .
         - docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
+        - docker build --platform arm --build-arg platform=arm32v7 -t laroque/crasher:latest-travis-arm .
         #- docker build --platform amd64 -t laroque/crasher:latest-travis-amd64 .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         #- docker push laroque/crasher:latest-travis-arm
