--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,10 @@ jobs:
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
         - sudo apt-get install qemu-user qemu-user-static
         - file /usr/bin/qemu-arm-static
+        - ls -l /usr/bin/qemu-arm-static
         - cp /usr/bin/qemu-arm-static .
         - ls -l qemu-arm-static
+        - chmod +x qemu-arm-static
         #- docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
         - uname -a
         #- docker build --platform arm -t laroque/crasher:latest-travis-arm .
