--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,13 @@ jobs:
         - cp /usr/bin/qemu-arm-static .
         - ls -l qemu-arm-static
         - chmod +x qemu-arm-static
-        #- docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
+        ##- docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
         - uname -a
-        #- docker build --platform arm -t laroque/crasher:latest-travis-arm .
-        - docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
+        ##- docker build --platform arm -t laroque/crasher:latest-travis-arm .
+        #### this next line worked until I added the qemu interpreter step
+        #- docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
         - docker build --platform arm --build-arg platform=arm32v7 -t laroque/crasher:latest-travis-arm .
-        #- docker build --platform amd64 -t laroque/crasher:latest-travis-amd64 .
+        ##- docker build --platform amd64 -t laroque/crasher:latest-travis-amd64 .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         #- docker push laroque/crasher:latest-travis-arm
         - docker push laroque/crasher:latest-travis-amd64
