--- a/.travis.yml
+++ b/.travis.yml
@@ -32,17 +32,16 @@ jobs:
         - cp /usr/bin/qemu-arm-static .
         - ls -l qemu-arm-static
         - chmod +x qemu-arm-static
-        ##- docker build --platform arm --build-arg platform=armhf -t laroque/crasher:latest-travis-arm .
-        - uname -a
-        ##- docker build --platform arm -t laroque/crasher:latest-travis-arm .
-        #### this next line worked until I added the qemu interpreter step
-        #- docker build --platform amd64 --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
-        - docker build --build-arg platform=arm32v7 -t laroque/crasher:latest-travis-arm .
-        ##- docker build --platform amd64 -t laroque/crasher:latest-travis-amd64 .
+        ##### actually build things
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        #- docker push laroque/crasher:latest-travis-arm
+        ##### arm
+        - docker build --build-arg platform=arm32v7 -t laroque/crasher:latest-travis-arm .
+        - docker push laroque/crasher:latest-travis-arm
+        ##### amd64
+        - docker build --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
         - docker push laroque/crasher:latest-travis-amd64
-        #- docker manifest create laroque/crasher:latest-travis laroque/crasher:latest-travis-arm laroque/crasher:latest-travis-amd64
-        #- docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-arm --arch arm
-        #- docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-amd64 --arch amd64
-        #- docker manifest push laroque/crasher:latest-travis
+        ##### manifest
+        - docker manifest create laroque/crasher:latest-travis laroque/crasher:latest-travis-arm laroque/crasher:latest-travis-amd64
+        - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-arm --arch arm
+        - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-amd64 --arch amd64
+        - docker manifest push laroque/crasher:latest-travis
