--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ jobs:
     - stage: environment setup
       before_install: .travis/setup_emulation.sh
       script:
+        - set -e
         #- chmod +x qemu-arm-static
         - cp /usr/bin/qemu-x86_64-static this_qemu
         - .travis/bootstrap_base.sh -u amd64 -r debian -t 9
@@ -42,3 +43,4 @@ jobs:
         - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-arm --arch arm
         - docker manifest annotate laroque/crasher:latest-travis laroque/crasher:latest-travis-amd64 --arch amd64
         - docker manifest push laroque/crasher:latest-travis
+        - set +e
