--- a/.travis.yml
+++ b/.travis.yml
@@ -28,15 +28,15 @@ jobs:
         - set -e
         #- chmod +x qemu-arm-static
         - cp /usr/bin/qemu-x86_64-static this_qemu
-        - .travis/bootstrap_base.sh -u amd64 -r debian -t 9
         ##### actually build things
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        ##### amd64
-        - docker build --build-arg platform=amd64 -t laroque/crasher:latest-travis-amd64 .
+        ## amd64
+        - .travis/bootstrap_base.sh -u amd64 -r debian -t 9
+        - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
         - docker push laroque/crasher:latest-travis-amd64
-        ##### arm
+        ## arm
         - cp /usr/bin/qemu-arm-static .
-        - docker build --build-arg platform=arm32v7 -t laroque/crasher:latest-travis-arm .
+        - docker build --build-arg img_user=arm32v7 -t laroque/crasher:latest-travis-arm .
         - docker push laroque/crasher:latest-travis-arm
         ##### manifest
         - docker manifest create laroque/crasher:latest-travis laroque/crasher:latest-travis-arm laroque/crasher:latest-travis-amd64
