--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
         ##### actually build things
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         ## amd64
+        - file this_qemu
         - .travis/bootstrap_base.sh -u amd64 -r debian -t 9
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
         - docker push laroque/crasher:latest-travis-amd64
