--- a/.travis/Dockerfile.shim
+++ b/.travis/Dockerfile.shim
@@ -5,6 +5,7 @@ ARG IMAGE_TAG=9
 FROM ${IMAGE_USER}/${IMAGE_REPO}:${IMAGE_TAG}
 
 # copy the local qemu interpreter layer
+# NOTE: this file is *not* provided in the repo, it needs to be installed via your package manager and copied here
 COPY this_qemu /usr/bin/qemu-static
 
 ## shim for sh
