--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
         - docker push laroque/crasher:latest-travis-amd64
         ## arm
-        - cp /usr/bin/qemu-arm-static ./this_qemu
+        - cp /usr/bin/qemu-arm-static .travis/this_qemu
         - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9
         #- docker build --build-arg img_user=arm32v7 -t laroque/crasher:latest-travis-arm .
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-arm .
