--- a/.travis.yml
+++ b/.travis.yml
@@ -24,24 +24,26 @@ jobs:
   include:
     ## amd64
     - stage: build
+      name: "amd64 build"
       before_install: .travis/setup_emulation.sh
       script:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - cp /usr/bin/qemu-x86_64-static .travis/this_qemu
         - .travis/bootstrap_base.sh -u amd64 -r debian -t 9
-        - docker inspect local/emulation_base:latest
+        - docker inspect local/emulation_base:latest | grep -A2 RepoDigest
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
         - docker push laroque/crasher:latest-travis-amd64
     ## arm
     - stage: build
+      name: "arm32v7 build"
       before_install: .travis/setup_emulation.sh
       script:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - cp /usr/bin/qemu-arm-static .travis/this_qemu
         - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9
-        - docker inspect local/emulation_base:latest
+        - docker inspect local/emulation_base:latest | grep -A2 RepoDigest
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-arm .
         - docker push laroque/crasher:latest-travis-arm
     - stage: manifest
