--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,6 @@ jobs:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - cp /usr/bin/qemu-x86_64-static .travis/this_qemu
         - .travis/bootstrap_base.sh -u amd64 -r debian -t 9
-        - docker inspect local/emulation_base:latest | grep -A2 RepoDigest
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
         - docker push laroque/crasher:latest-travis-amd64
     ## arm
@@ -42,8 +41,8 @@ jobs:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - cp /usr/bin/qemu-arm-static .travis/this_qemu
+        - file .travis/this_qemu
         - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9
-        - docker inspect local/emulation_base:latest | grep -A2 RepoDigest
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-arm .
         - docker push laroque/crasher:latest-travis-arm
     - stage: assemble manifest
