--- a/.travis/Dockerfile.shim
+++ b/.travis/Dockerfile.shim
@@ -6,12 +6,14 @@ FROM ${IMAGE_USER}/${IMAGE_REPO}:${IMAGE_TAG}
 
 # copy the local qemu interpreter layer
 # NOTE: this file is *not* provided in the repo, it needs to be installed via your package manager and copied here
-COPY this_qemu /usr/bin/qemu-static
+COPY this_qemu QEMU_TARGET_LOCATION
 
 ## shim for sh
-SHELL ["/usr/bin/qemu-static", "/bin/sh", "-c"]
+#SHELL ["QEMU_TARGET_LOCATION", "/bin/sh", "-c"]
 #RUN echo "a foo thing"
-#RUN ["/usr/bin/qemu-static", "/bin/sh", "-c", "cp /bin/sh /bin/sh.real"]
-#RUN ["cp", "/bin/sh", "/bin/sh.real"]
+
+#RUN ["QEMU_TARGET_LOCATION", "/bin/sh", "-c", "cp /bin/sh /bin/sh.real"]
+
+#RUN ["QEMU_TARGET_LOCATION", "/bin/sh", "-c", "cp", "/bin/sh", "/bin/sh.real"]
 #RUN ["/usr/bin/qemu-static", "/bin/sh", "-c", "echo '#!/usr/bin/qemu-static /bin/sh.real\nset -o errexit\ncp /bin/sh.real /bin/sh\n/bin/sh \"$@\"\ncp /usr/bin/sh-shim /bin/sh' > /usr/bin/sh-shim"]
 #RUN ["/usr/bin/qemu-static", "/bin/sh", "-c", "cp /usr/bin/sh-shim /bin/sh"]
