--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - cp /usr/bin/qemu-x86_64-static .travis/this_qemu
-        - .travis/bootstrap_base.sh -u amd64 -r debian -t 9
+        - .travis/bootstrap_base.sh -u amd64 -r debian -t 9 -a amd64
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
         - docker push laroque/crasher:latest-travis-amd64
     ## arm
@@ -41,7 +41,7 @@ jobs:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - cp /usr/bin/qemu-arm-static .travis/this_qemu
         - file .travis/this_qemu
-        - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9
+        - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9 -a arm7
         - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-arm .
         - docker push laroque/crasher:latest-travis-arm
     - stage: assemble manifest
