into the script

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,9 @@ jobs:
       script:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        #- cp /usr/bin/qemu-x86_64-static .travis/this_qemu
         - .travis/bootstrap_base.sh -u amd64 -r debian -t 9 -a amd64
-        - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
-        - docker push laroque/crasher:latest-travis-amd64
+        #- docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
+        #- docker push laroque/crasher:latest-travis-amd64
     ## arm
     - stage: build images
       name: arm32v7
@@ -39,11 +38,9 @@ jobs:
       script:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        #- cp /usr/bin/qemu-arm-static .travis/this_qemu
-        #- file .travis/this_qemu
         - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9 -a arm7
-        - docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-arm .
-        - docker push laroque/crasher:latest-travis-arm
+        #- docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-arm .
+        #- docker push laroque/crasher:latest-travis-arm
     - stage: assemble manifest
       script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
