--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
       script:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - .travis/bootstrap_base.sh -u amd64 -r debian -t 9 -a amd64
+        - .travis/bootstrap_base.sh -u amd64 -r debian -t 9 -a amd64 -i laroque/crasher:`echo ${TRAVIS_BRANCH} | tr / _`
         #- docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-amd64 .
         #- docker push laroque/crasher:latest-travis-amd64
     ## arm
@@ -38,7 +38,7 @@ jobs:
       script:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9 -a arm7
+        - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9 -a arm7 -i laroque/crasher:`echo ${TRAVIS_BRANCH} | tr / _`
         #- docker build --build-arg img_user=local --build-arg img_repo=emulation_base --build-arg img_tag=latest -t laroque/crasher:latest-travis-arm .
         #- docker push laroque/crasher:latest-travis-arm
     - stage: assemble manifest
