more script name changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ addons:
       - docker-ce
       - qemu-user-static
 
-env:
-  - DOCKER_CLI_EXPERIMENTAL=enabled
+#env:
+#  - DOCKER_CLI_EXPERIMENTAL=enabled
 
 branches:
   only:
@@ -28,7 +28,7 @@ jobs:
       script:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - .travis/bootstrap_base.sh -u amd64 -r debian -t 9 -a amd64 -i laroque/crasher:`echo ${TRAVIS_BRANCH} | tr / _`
+        - .travis/bootstrap_image.sh -u amd64 -r debian -t 9 -a amd64 -i laroque/crasher:`echo ${TRAVIS_BRANCH} | tr / _`
     ## arm
     - stage: build images
       name: arm32v7
@@ -36,7 +36,7 @@ jobs:
       script:
         - set -e
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - .travis/bootstrap_base.sh -u arm32v7 -r debian -t 9 -a arm7 -i laroque/crasher:`echo ${TRAVIS_BRANCH} | tr / _`
+        - .travis/bootstrap_image.sh -u arm32v7 -r debian -t 9 -a arm7 -i laroque/crasher:`echo ${TRAVIS_BRANCH} | tr / _`
     - stage: assemble manifest
       script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
