chart works now

--- a/crasher.chart/templates/deployment.yaml
+++ b/crasher.chart/templates/deployment.yaml
@@ -45,4 +45,4 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: demochart-configmap
+            name: {{ .Values.crasherCMName }}
